Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67515

MinGW: process fails with wildcards under windows command prompt: ASSERT: "allArguments.size() == d->origArgc" in file kernel/qcoreapplication.cpp, line 2362

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • None
    • 5.10.1
    • Core: Other
    • None
    • msys2: mingw-w64-x86_64-qt5-static

      windows 10 64 bit

       
    • 4e08651bacd8321f124610e4c5680811e1e9a0fa (qt/qtbase/dev) 57a31ec2e96bf3aec114d4768098e7b4f46b0ab1 (qt/qtbase/5.15)

      msys2 ok:

      490 0 mingw [eb@DESKTOP-QSF31OL] ~/testqtc $ debug/testqtc.exe
      checkpoint 1: parser.positionalArguments().size() returns  0
      491 0 mingw [eb@DESKTOP-QSF31OL] ~/testqtc $ debug/testqtc.exe *
      checkpoint 1: parser.positionalArguments().size() returns  10
      492 0 mingw [eb@DESKTOP-QSF31OL] ~/testqtc $
      

       
      command prompt (also powershell fails:
       

      C:\msys64\home\eb\testqtc>debug\testqtc.exe
      checkpoint 1: parser.positionalArguments().size() returns  0
      C:\msys64\home\eb\testqtc>debug\testqtc.exe *
      ASSERT: "allArguments.size() == d->origArgc" in file kernel/qcoreapplication.cpp, line 2362
      This application has requested the Runtime to terminate it in an unusual way.
      Please contact the application's support team for more information.
      C:\msys64\home\eb\testqtc>
      

       

       

      make
      make -f Makefile.Debug
      make[1]: Entering directory '/home/eb/testqtc'
      g++ -c -fno-keep-inline-dllexport -march=nocona -mtune=core2 -Wa,-mbig-obj -g -Wall -W -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DQT_DEPRECATED_WARNINGS -DQT_GU\
      I_LIB -DQT_CORE_LIB -I. -I. -I../../../mingw64/qt5-static/include -I../../../mingw64/qt5-static/include/QtGui -I../../../mingw64/qt5-static/include/QtCore -Idebug -I\include -I../\
      ../../mingw64/qt5-static/share/qt5/mkspecs/win32-g++  -o debug/main.o main.cpp
      g++ -static -Wl,-subsystem,console -mthreads -o debug/testqtc.exe debug/main.o debug/testqtc_plugin_import.o  -LC:/msys64/mingw64/qt5-static/share/qt5/plugins/platforms C:/msys64/\
      mingw64/qt5-static/share/qt5/plugins/platforms/libqwindowsd.a -ldwmapi -lwinspool -lshlwapi -lrpcrt4 -LC:/msys64/mingw64/qt5-static/lib C:/msys64/mingw64/qt5-static/lib/libQt5Even\
      tDispatcherSupportd.a C:/msys64/mingw64/qt5-static/lib/libQt5FontDatabaseSupportd.a C:/msys64/mingw64/qt5-static/lib/libqtfreetyped.a C:/msys64/mingw64/qt5-static/lib/libQt5ThemeS\
      upportd.a C:/msys64/mingw64/qt5-static/lib/libQt5AccessibilitySupportd.a C:/msys64/mingw64/qt5-static/lib/libQt5VulkanSupportd.a -LC:/msys64/mingw64/qt5-static/share/qt5/plugins/i\
      mageformats C:/msys64/mingw64/qt5-static/share/qt5/plugins/imageformats/libqgifd.a C:/msys64/mingw64/qt5-static/share/qt5/plugins/imageformats/libqicnsd.a C:/msys64/mingw64/qt5-st\
      atic/share/qt5/plugins/imageformats/libqicod.a C:/msys64/mingw64/qt5-static/share/qt5/plugins/imageformats/libqjp2d.a -ljasper C:/msys64/mingw64/qt5-static/share/qt5/plugins/image\
      formats/libqjpegd.a C:/msys64/mingw64/qt5-static/share/qt5/plugins/imageformats/libqtgad.a C:/msys64/mingw64/qt5-static/share/qt5/plugins/imageformats/libqtiffd.a C:/msys64/mingw6\
      4/qt5-static/share/qt5/plugins/imageformats/libqwbmpd.a C:/msys64/mingw64/qt5-static/share/qt5/plugins/imageformats/libqwebpd.a C:/msys64/mingw64/qt5-static/lib/libQt5Guid.a -lcom\
      dlg32 -loleaut32 -limm32 -lglu32 -lopengl32 -lgdi32 C:/msys64/mingw64/qt5-static/lib/libqtlibpngd.a C:/msys64/mingw64/qt5-static/lib/libqtharfbuzzd.a C:/msys64/mingw64/qt5-static/\
      lib/libQt5Cored.a -lmpr -lnetapi32 -luserenv -lversion -lws2_32 -lkernel32 -luser32 -lshell32 -luuid -lole32 -ladvapi32 -lwinmm C:/msys64/mingw64/qt5-static/lib/libqtpcre2d.a
      make[1]: Leaving directory '/home/eb/testqtc
       

        1. main_workaround.cpp
          1 kB
        2. main.cpp
          0.6 kB
        3. qtbug67515_stack.txt
          2 kB
        4. qtbug67515.zip
          1 kB
        5. testqtc.pro
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            emre@biochem.uthscsa.edu emre@biochem.uthscsa.edu
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes